04-networking/ingress/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: webapp
  labels:
    app: multitool
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: http-port
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
