04-networking/ingress/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: multitool-service
  namespace: webapp
spec:
  selector:
    app: multitool
  ports:
  - name: http
    port: 8080      
    targetPort: 8080
