04-networking/ingress/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: webapp
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
